--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/QuizDB?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/quizdb?createDatabaseIfNotExist=true
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
-spring.data.jpa.repositories.enabled=true
-spring.jpa.show-sql=true
-spring.jpa.database=mysql
