Fixed links in cards and give a credit to Freepik on home page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.properties.hibernate.format_sql=true
 
+security.oauth2.client.client-id=Iv1.b8861ea80b25ec35
+security.oauth2.client.client-secret=0d7215a989acb1b8dbc343ce951df1a0c50b25a4
+
