--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,9 @@
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/quizdb?createDatabaseIfNotExist=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.properties.hibernate.format_sql=true
-
-security.oauth2.client.client-id=Iv1.b8861ea80b25ec35
-security.oauth2.client.client-secret=0d7215a989acb1b8dbc343ce951df1a0c50b25a4
 
