--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/quizdb?createDatabaseIfNotExist=true
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
